# c_google_test

./: .gitignore  .jenkins.Dockerfile  BUILD  Jenkinsfile  README.md  build.sh  our_model.c  our_model_data.c  our_model_manifest.txt  our_model_prev.mat  our_model_types.h  our_model_unittest.cc  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rtmodel.h  test.sh
.devcontainer/: Dockerfile  devcontainer.json
dextool_examples/algo_test/: CMakeLists.txt
dextool_examples/algo_test/test/: tests.cpp
simulink_example/: BUILD  run_dextool.sh
simulink_example/MATLAB_R2021a.app/rtw/c/src/: rt_logging.c
simulink_example/MATLAB_R2021a.app/rtw/c/src/common/: rt_cppclass_main.cpp
simulink_example/R2021b/rtw/c/src/common/: rt_cppclass_main.cpp  rt_main.c
simulink_example/bacteria-simulink/our_model_grt_rtw/: buildInfo.mat  builtin_typeid_types.h  defines.txt  multiword_types.h  our_model.cpp  our_model.h  our_model_data.cpp  our_model_manifest.txt  our_model_private.h  our_model_types.h  our_model_unittest.cc  rtGetInf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
simulink_example/our_model_prev_grt_rtw/: buildInfo.mat  builtin_typeid_types.h  defines.txt  multiword_types.h  our_model_prev.cpp  our_model_prev.h  our_model_prev_data.cpp  our_model_prev_manifest.txt  our_model_prev_private.h  our_model_prev_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
simulink_example/test/: halil_function_test.cpp  our_model_prev_unittest.cpp
simulink_example_cmake/bacteria-simulink/: .dextool_mutate.toml
simulink_example_cmake/bacteria-simulink/our_model_grt_rtw/: CMakeLists.txt  buildInfo.mat  builtin_typeid_types.h  multiword_types.h  our_model.cpp  our_model.h  our_model_data.cpp  our_model_manifest.txt  our_model_private.h  our_model_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  setup.sh
simulink_example_cmake/bacteria-simulink/test/: halil_function_test.cpp
